rholang-tree-sitter/test/corpus/hashing.txt
========
Hashing
========

new x, y, stdout(`rho:io:stdout`) in {
    x!(@"name"!("Joe") | @"age"!(40)) | // (1)
    for (@r <- x) { @"keccak256Hash"!(r.toByteArray(), *y) } |
    // hash the program from (1)
    for (@h <- y) { stdout!(h) } // print out the keccak256 hash
}

---

(source_file
  (new
    decls: (name_decls
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var)
        uri: (uri_literal)))
    proc: (block
      (par
        (par
          (send
            channel: (var)
            send_type: (send_single)
            inputs: (send_inputs
              data: (send_data
                (par
                  (send
                    channel: (quote
                      (string_literal))
                    send_type: (send_single)
                    inputs: (send_inputs
                      data: (send_data
                        (string_literal))))
                  (send
                    channel: (quote
                      (string_literal))
                    send_type: (send_single)
                    inputs: (send_inputs
                      data: (send_data
                        (long_literal))))))))
          (input
            receipts: (receipts
              (receipt
                (linear_bind
                  names: (names
                    (quote
                      (var)))
                  input: (simple_source
                    (var)))))
            proc: (block
              (send
                channel: (quote
                  (string_literal))
                send_type: (send_single)
                inputs: (send_inputs
                  data: (send_data
                    (method
                      receiver: (var)
                      name: (var)
                      args: (args))
                    (eval
                      (var))))))))
        (input
          receipts: (receipts
            (receipt
              (linear_bind
                names: (names
                  (quote
                    (var)))
                input: (simple_source
                  (var)))))
          proc: (block
            (send
              channel: (var)
              send_type: (send_single)
              inputs: (send_inputs
                data: (send_data
                  (var))))))))))
