rholang-tree-sitter/test/corpus/match_patterns.txt
===================
Patterns in a match
===================

new sumProd in {
    contract sumProd(@arr, ret) = {
      new fold, sum, prod in {
        contract fold(@init, op, @arr, ret) = {
          match arr {
            [h ...t] => {
              new tailCh in {
                fold!(init, *op, t, *tailCh) |
                for (@folded <- tailCh) {
                  op!(h, folded, *ret)
                }
              }
            }
            [] => ret!(init)
          }
        } |
        contract sum(@arr, ret) = {
          new add in {
            contract add(@a, @b, ret) = {
              ret!(a + b)
            } |
            fold!(0, *add, arr, *ret)
          }
        } |
        contract prod(@arr, ret) = {
          new mult in {
            contract mult(@a, @b, ret) = {
              ret!(a * b)
            } |
            fold!(1, *mult, arr, *ret)
          }
        } |
        new sumCh, prodCh in {
          sum!(arr, *sumCh) |
          prod!(arr, *prodCh) |
          for (@s <- sumCh; @p <- prodCh) {
            ret!([s, p])
          }
        }
      }
    } |
    sumProd!([4,5,6], "stdout")
}

---

(source_file
  (new
    decls: (name_decls
      (name_decl
        (var)))
    proc: (block
      (par
        (contract
          name: (var)
          formals: (names
            (quote
              (var))
            (var))
          proc: (block
            (new
              decls: (name_decls
                (name_decl
                  (var))
                (name_decl
                  (var))
                (name_decl
                  (var)))
              proc: (block
                (par
                  (par
                    (par
                      (contract
                        name: (var)
                        formals: (names
                          (quote
                            (var))
                          (var)
                          (quote
                            (var))
                          (var))
                        proc: (block
                          (match
                            expression: (var)
                            cases: (cases
                              (case
                                pattern: (collection
                                  (list
                                    (var)
                                    remainder: (var)))
                                proc: (block
                                  (new
                                    decls: (name_decls
                                      (name_decl
                                        (var)))
                                    proc: (block
                                      (par
                                        (send
                                          channel: (var)
                                          send_type: (send_single)
                                          inputs: (send_inputs
                                            data: (send_data
                                              (var)
                                              (eval
                                                (var))
                                              (var)
                                              (eval
                                                (var)))))
                                        (input
                                          receipts: (receipts
                                            (receipt
                                              (linear_bind
                                                names: (names
                                                  (quote
                                                    (var)))
                                                input: (simple_source
                                                  (var)))))
                                          proc: (block
                                            (send
                                              channel: (var)
                                              send_type: (send_single)
                                              inputs: (send_inputs
                                                data: (send_data
                                                  (var)
                                                  (var)
                                                  (eval
                                                    (var))))))))))))
                              (case
                                pattern: (collection
                                  (list))
                                proc: (send
                                  channel: (var)
                                  send_type: (send_single)
                                  inputs: (send_inputs
                                    data: (send_data
                                      (var)))))))))
                      (contract
                        name: (var)
                        formals: (names
                          (quote
                            (var))
                          (var))
                        proc: (block
                          (new
                            decls: (name_decls
                              (name_decl
                                (var)))
                            proc: (block
                              (par
                                (contract
                                  name: (var)
                                  formals: (names
                                    (quote
                                      (var))
                                    (quote
                                      (var))
                                    (var))
                                  proc: (block
                                    (send
                                      channel: (var)
                                      send_type: (send_single)
                                      inputs: (send_inputs
                                        data: (send_data
                                          (add
                                            (var)
                                            (var)))))))
                                (send
                                  channel: (var)
                                  send_type: (send_single)
                                  inputs: (send_inputs
                                    data: (send_data
                                      (long_literal)
                                      (eval
                                        (var))
                                      (var)
                                      (eval
                                        (var)))))))))))
                    (contract
                      name: (var)
                      formals: (names
                        (quote
                          (var))
                        (var))
                      proc: (block
                        (new
                          decls: (name_decls
                            (name_decl
                              (var)))
                          proc: (block
                            (par
                              (contract
                                name: (var)
                                formals: (names
                                  (quote
                                    (var))
                                  (quote
                                    (var))
                                  (var))
                                proc: (block
                                  (send
                                    channel: (var)
                                    send_type: (send_single)
                                    inputs: (send_inputs
                                      data: (send_data
                                        (mult
                                          (var)
                                          (var)))))))
                              (send
                                channel: (var)
                                send_type: (send_single)
                                inputs: (send_inputs
                                  data: (send_data
                                    (long_literal)
                                    (eval
                                      (var))
                                    (var)
                                    (eval
                                      (var)))))))))))
                  (new
                    decls: (name_decls
                      (name_decl
                        (var))
                      (name_decl
                        (var)))
                    proc: (block
                      (par
                        (par
                          (send
                            channel: (var)
                            send_type: (send_single)
                            inputs: (send_inputs
                              data: (send_data
                                (var)
                                (eval
                                  (var)))))
                          (send
                            channel: (var)
                            send_type: (send_single)
                            inputs: (send_inputs
                              data: (send_data
                                (var)
                                (eval
                                  (var))))))
                        (input
                          receipts: (receipts
                            (receipt
                              (linear_bind
                                names: (names
                                  (quote
                                    (var)))
                                input: (simple_source
                                  (var))))
                            (receipt
                              (linear_bind
                                names: (names
                                  (quote
                                    (var)))
                                input: (simple_source
                                  (var)))))
                          proc: (block
                            (send
                              channel: (var)
                              send_type: (send_single)
                              inputs: (send_inputs
                                data: (send_data
                                  (collection
                                    (list
                                      (var)
                                      (var))))))))))))))))
        (send
          channel: (var)
          send_type: (send_single)
          inputs: (send_inputs
            data: (send_data
              (collection
                (list
                  (long_literal)
                  (long_literal)
                  (long_literal)))
              (string_literal))))))))
