rholang-tree-sitter/test/corpus/mutable_state.txt
=============
Mutable state
=============

new MakeCell in {
    // Makes a single cell in which you can store values
    contract MakeCell(@init, get, set) = {
      new valueStore in {
        valueStore!(init) |
        contract get(ack) = {
          for(@value <- valueStore) {
            valueStore!(value) | ack!(value)
          }
        } |
        contract set(@newValue, ack) = {
          for(_ <- valueStore) {
            valueStore!(newValue) | ack!(true)
          }
        }
      }
    } |

    new myGet, mySet in {
      MakeCell!(123, *myGet, *mySet) |
      new ack in {
        myGet!(*ack) |
        for (@result <- ack) {
          //result now contains the value 123
          mySet!(456, *ack) |
          for (_ <- ack) {
            myGet!(*ack) |
            for (@result <- ack) {
              //result now contains the value 456
              Nil
            }
          }
        }
      }
    }
  }

---

(source_file
  (new
    decls: (name_decls
      (name_decl
        (var)))
    proc: (block
      (par
        (contract
          name: (var)
          formals: (names
            (quote
              (var))
            (var)
            (var))
          proc: (block
            (new
              decls: (name_decls
                (name_decl
                  (var)))
              proc: (block
                (par
                  (par
                    (send
                      channel: (var)
                      send_type: (send_single)
                      inputs: (send_inputs
                        data: (send_data
                          (var))))
                    (contract
                      name: (var)
                      formals: (names
                        (var))
                      proc: (block
                        (input
                          receipts: (receipts
                            (receipt
                              (linear_bind
                                names: (names
                                  (quote
                                    (var)))
                                input: (simple_source
                                  (var)))))
                          proc: (block
                            (par
                              (send
                                channel: (var)
                                send_type: (send_single)
                                inputs: (send_inputs
                                  data: (send_data
                                    (var))))
                              (send
                                channel: (var)
                                send_type: (send_single)
                                inputs: (send_inputs
                                  data: (send_data
                                    (var))))))))))
                  (contract
                    name: (var)
                    formals: (names
                      (quote
                        (var))
                      (var))
                    proc: (block
                      (input
                        receipts: (receipts
                          (receipt
                            (linear_bind
                              names: (names
                                (wildcard))
                              input: (simple_source
                                (var)))))
                        proc: (block
                          (par
                            (send
                              channel: (var)
                              send_type: (send_single)
                              inputs: (send_inputs
                                data: (send_data
                                  (var))))
                            (send
                              channel: (var)
                              send_type: (send_single)
                              inputs: (send_inputs
                                data: (send_data
                                  (bool_literal))))))))))))))
        (new
          decls: (name_decls
            (name_decl
              (var))
            (name_decl
              (var)))
          proc: (block
            (par
              (send
                channel: (var)
                send_type: (send_single)
                inputs: (send_inputs
                  data: (send_data
                    (long_literal)
                    (eval
                      (var))
                    (eval
                      (var)))))
              (new
                decls: (name_decls
                  (name_decl
                    (var)))
                proc: (block
                  (par
                    (send
                      channel: (var)
                      send_type: (send_single)
                      inputs: (send_inputs
                        data: (send_data
                          (eval
                            (var)))))
                    (input
                      receipts: (receipts
                        (receipt
                          (linear_bind
                            names: (names
                              (quote
                                (var)))
                            input: (simple_source
                              (var)))))
                      proc: (block
                        (par
                          (send
                            channel: (var)
                            send_type: (send_single)
                            inputs: (send_inputs
                              data: (send_data
                                (long_literal)
                                (eval
                                  (var)))))
                          (input
                            receipts: (receipts
                              (receipt
                                (linear_bind
                                  names: (names
                                    (wildcard))
                                  input: (simple_source
                                    (var)))))
                            proc: (block
                              (par
                                (send
                                  channel: (var)
                                  send_type: (send_single)
                                  inputs: (send_inputs
                                    data: (send_data
                                      (eval
                                        (var)))))
                                (input
                                  receipts: (receipts
                                    (receipt
                                      (linear_bind
                                        names: (names
                                          (quote
                                            (var)))
                                        input: (simple_source
                                          (var)))))
                                  proc: (block
                                    (nil)))))))))))))))))))
